--- a/discounts.yaml
+++ b/discounts.yaml
@@ -14,20 +14,9 @@ spec:
     spec:
       containers:
       - image: quay.io/dseveria/discounts:v1.0.1
-        imagePullPolicy: IfNotPresent
         name: discounts
         ports:
         - containerPort: 8080
-          name: http
-          protocol: TCP
-        resources: {}
-        terminationMessagePath: /dev/termination-log
-        terminationMessagePolicy: File
-      dnsPolicy: ClusterFirst
-      restartPolicy: Always
-      schedulerName: default-scheduler
-      securityContext: {}
-      terminationGracePeriodSeconds: 30
 ---
 apiVersion: v1
 kind: ConfigMap
@@ -44,12 +33,11 @@ kind: Service
 metadata:
   name: discounts
 spec:
-  ports:
-  - name: http
-    port: 8080
-    targetPort: 8080
   selector:
     app: discounts
+  ports:
+  - port: 8080
+    targetPort: 8080
   type: ClusterIP
 ---
 apiVersion: route.openshift.io/v1
@@ -61,8 +49,9 @@ spec:
     kind: Service
     name: discounts
     weight: 100
+  port:
+    targetPort: 8080
   tls:
     insecureEdgeTerminationPolicy: Redirect
     termination: edge
-  port:
-    targetPort: 8080
+  wildcardPolicy: None
